--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,11 +19,12 @@ jobs:
       run:  docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
     
     - name: Build docker-image
-      run: docker build -t a7medayman6/todolist-flask:latest .
+      run: docker build -t kunalmaurya/todo-app:latest .
     
     - name: Tag docker-image
-      run: docker tag $(docker images -aq | head -n1) ${{ secrets.DOCKER_USERNAME }}/todolist-flask:latest
+      run: docker tag $(docker images -aq | head -n1) ${{ secrets.DOCKER_USERNAME }}/todo-app:latest
+    
       
     - name: Push to registry
-      run: docker push a7medayman6/todolist-flask:latest
+      run: docker push kunalmaurya/todo-app:latest
     
